# low-lv-ml

./: CMakeLists.txt  README.md  activation.cpp  activation.h  layer.cpp  layer.h  main.cpp  main.py
